--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2640,23 +2640,8 @@ by Andrews et al recommends instead that this wind limit not be
 imposed, in order to avoid possible spread rate
 underprediction.[fn::Rothermel1972][fn::Andrews2013]
 
-*** Surface Fire Behavior in the Direction of Maximum Spread
-
-#+name: surface-fire-behavior-max
+#+name: surface-fire-eccentricity
 #+begin_src python
-from math import cos, exp, sqrt, radians
-from pyretechnics.conversion import fpm_to_mph
-
-
-def smallest_angle_between(theta1, theta2):
-  """
-  Computes the absolute difference between two angles as an angle between 0° and 180°.
-  The return angle has the same cosine as (- theta1 theta2) but may have an opposite sine.
-  """
-  angle = abs(theta1 - theta2)
-  return (360.0 - angle) if (angle > 180.0) else angle
-
-
 # FIXME: Surface L/W uses 0.25 but Crown L/W uses 0.125. Check Rothermel 1991.
 def surface_length_to_width_ratio(effective_wind_speed):
     """
@@ -2698,6 +2683,23 @@ def surface_fire_eccentricity(effective_wind_speed):
     """
     length_width_ratio = surface_length_to_width_ratio(effective_wind_speed)
     return sqrt(length_width_ratio ** 2.0 - 1.0) / length_width_ratio
+#+end_src
+
+*** Surface Fire Behavior in the Direction of Maximum Spread
+
+#+name: surface-fire-behavior-max
+#+begin_src python
+from math import cos, exp, sqrt, radians
+from pyretechnics.conversion import fpm_to_mph
+
+
+def smallest_angle_between(theta1, theta2):
+  """
+  Computes the absolute difference between two angles as an angle between 0° and 180°.
+  The return angle has the same cosine as (- theta1 theta2) but may have an opposite sine.
+  """
+  angle = abs(theta1 - theta2)
+  return (360.0 - angle) if (angle > 180.0) else angle
 
 
 # NOTE: No longer takes ellipse_adjustment_factor parameter
