--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -2643,6 +2643,10 @@ underprediction.[fn::Rothermel1972][fn::Andrews2013]
 #+name: surface-fire-eccentricity
 #+begin_src python
 # FIXME: Surface L/W uses 0.25 but Crown L/W uses 0.125. Check Rothermel 1991.
+from math import exp, sqrt
+from pyretechnics.conversion import fpm_to_mph
+
+
 def surface_length_to_width_ratio(effective_wind_speed):
     """
     Calculate the length_to_width_ratio of the surface fire front using eq. 9 from
@@ -2689,19 +2693,6 @@ def surface_fire_eccentricity(effective_wind_speed):
 
 #+name: surface-fire-behavior-max
 #+begin_src python
-from math import cos, exp, sqrt, radians
-from pyretechnics.conversion import fpm_to_mph
-
-
-def smallest_angle_between(theta1, theta2):
-  """
-  Computes the absolute difference between two angles as an angle between 0° and 180°.
-  The return angle has the same cosine as (- theta1 theta2) but may have an opposite sine.
-  """
-  angle = abs(theta1 - theta2)
-  return (360.0 - angle) if (angle > 180.0) else angle
-
-
 # NOTE: No longer takes ellipse_adjustment_factor parameter
 # FIXME: Don't include spread_rate_adjustment in this function
 def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, wind_from_direction,
@@ -2762,14 +2753,27 @@ def calc_surface_fire_behavior_max(surface_fire_min, midflame_wind_speed, wind_f
     # Calculate eccentricity
     spread_properties["eccentricity"] = surface_fire_eccentricity(spread_properties["effective_wind_speed"])
     return spread_properties
+#+end_src
+
+*** Surface Fire Behavior in Any Direction
+
+#+name: surface-fire-behavior-in-direction
+#+begin_src python
+from math import cos, radians
+
+
+def smallest_angle_between(theta1, theta2):
+  """
+  Computes the absolute difference between two angles as an angle between 0° and 180°.
+  The return angle has the same cosine as (- theta1 theta2) but may have an opposite sine.
+  """
+  angle = abs(theta1 - theta2)
+  return (360.0 - angle) if (angle > 180.0) else angle
 
 
 def compute_spread_rate(max_spread_rate, max_spread_direction, eccentricity, spread_direction):
     theta = smallest_angle_between(max_spread_direction, spread_direction)
-    if almost_zero(eccentricity) or almost_zero(theta):
-        return max_spread_rate
-    else:
-        return max_spread_rate * (1.0 - eccentricity) / (1.0 - eccentricity * cos(radians(theta)))
+    return max_spread_rate * (1.0 - eccentricity) / (1.0 - eccentricity * cos(radians(theta)))
 #+end_src
 
 This concludes our coverage of the surface fire behavior equations
